# Scratch-off-game-developed-in-C-

./: .gitignore  README.md
desktop/: config.h  game.cpp  main.cpp  render.cpp  save.cpp
desktop/desktop_bak/: README.md  game.h  render.h  save.h
terminal/: main.cpp  main.h
web/public/js/: app.js
web/server/: config.h  db.cpp  db.h  handlers.cpp  handlers.h  http.h  name_filter.h  ring_buffer.h  server.h  tms_client.h
web/web_bak/: README.md
web/web_bak/public/: index.html
web/web_bak/public/css/: style.css
web/web_bak/public/js/: scratch.js
web/web_bak/server/: CMakeLists.txt  db.cpp  handlers.cpp  http.cpp  main.cpp  rate_limiter.h  server.cpp
web/web_bak/sql/: schema.sql
